--- a/css/style.css
+++ b/css/style.css
@@ -1,197 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
-
-body {
-    background-color: #fafafa;
-    color: #757575;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-}
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-button {
-    background: 0 0;
-    border: none;
-    border-radius: 2px;
-    color: #757575;
-    position: relative;
-    height: 36px;
-    margin: 0;
-    min-width: 64px;
-    padding: 0 16px;
-    display: inline-block;
-    font-family: "Roboto", sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0;
-    overflow: hidden;
-    will-change: box-shadow;
-    transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
-    outline: none;
-    cursor: pointer;
-    text-decoration: none;
-    text-align: center;
-    line-height: 36px;
-    vertical-align: middle;
-}
-
-button:hover {
-    background-color: rgba(158,158,158,.2);
-}
-
-button:active {
-    background-color: rgba(158,158,158,.4);
-}
-
-button.icon {
-    border-radius: 50%;
-    font-size: 24px;
-    height: 32px;
-    margin-left: 0;
-    margin-right: 0;
-    min-width: 32px;
-    width: 32px;
-    padding: 0;
-    overflow: hidden;
-    line-height: normal;
-}
-
-button .material-icons {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-12px,-12px);
-    line-height: 24px;
-    width: 24px;
-    vertical-align: middle;
-}
-
-input {
-    font-family: 'Consolas', Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    color: #757575;
-    padding: .5em;
-    border-radius: 2px;
-    border: 1px solid lightgray;
-    outline: none;
-}
-
-main {
-    margin: 20px 20px;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;    
-}
-
-.personal {
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.todo {
-    width: 70%;
-    box-shadow: 1px 2px 2px 1px rgb(220 220 220);
-    width: 70%;
-    height: 100%;
-}
-
-.todo-header {
-    display: flex;
-    align-items: center;
-    color: white;
-    background-color: #4a76a8;
-    text-align: center;
-}
-
-.todo-header h1 {
-    display: inline-block;
-    color: #ffffff;
-    margin: 1rem auto;
-}
-
-
-
-/* Todo Item */
-.todo-item {
-    display: flex;
-    font-size: 1rem;
-    border-top: 1px solid rgba(0,0,0,.1);
-    background-color: #fff;
-    transition: all .2s;
-    -webkit-user-select: none;
-    user-select: none;
-    padding: 1em;
-    align-items: center;
-}
-
-.todo-item.completed * {
-    color: lightgray;
-}
-
-.todo-item .checkbox {
-    margin-right: .5rem;
-}
-
-.todo-item .title,
-.todo-item .textfield {
-    margin-right: auto;
-}
-
-.todo-item.completed .title {
-    text-decoration: line-through;
-}
-
-.todo-item.editing .title {
-    display: none;
-}
-
-.todo-item .textfield {
-    display: none;
-}
-
-.todo-item.editing .textfield {
-    display: block;
-}
-
-.todo-item button {
-    opacity: 0;
-    transition: all .2s;
-}
-
-.todo-item:hover button:not(.checkbox) {
-    opacity: 1;
-}
-
-
-
-/* Todo form */
-
-#todo-form {
-    display: flex;
-    background-color: #FAFAFA;
-    border-top: 1px solid rgba(0,0,0,.1);
-    padding: 10px;
-}
-
-#todo-form input {
-    flex: 1;
-    outline: none;
-    transition: all .2s;
-}
-
-#todo-form input:focus {
-    border: 1px solid #f0db4f;
-}
-
-#todo-form button {
-    margin-left: 10px;
-}
+@font-face{font-family:'Roboto';font-style:normal;font-weight:100;font-display:swap;src:local('Roboto Thin'),local('Roboto-Thin'),url(https://fonts.gstatic.com/s/roboto/v20/KFOkCnqEu92Fr1MmgWxP.ttf) format('truetype')}@font-face{font-family:'Roboto';font-style:normal;font-weight:300;font-display:swap;src:local('Roboto Light'),local('Roboto-Light'),url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmSU5vAw.ttf) format('truetype')}@font-face{font-family:'Roboto';font-style:normal;font-weight:400;font-display:swap;src:local('Roboto'),local('Roboto-Regular'),url(https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Me5Q.ttf) format('truetype')}@font-face{font-family:'Roboto';font-style:normal;font-weight:700;font-display:swap;src:local('Roboto Bold'),local('Roboto-Bold'),url(https://fonts.gstatic.com/s/roboto/v20/KFOlCnqEu92Fr1MmWUlvAw.ttf) format('truetype')}body{background-color:#fafafa;color:#757575;font-family:'Roboto',sans-serif;margin:0}ul{list-style:none;margin:0;padding:0}button{background-color:rgba(158,158,158,0.2);border:none;border-radius:2px;color:#757575;position:relative;height:36px;margin:0;min-width:64px;padding:0 16px;display:inline-block;font-family:"Roboto",sans-serif;font-size:14px;font-weight:500;text-transform:uppercase;letter-spacing:0;overflow:hidden}button:active{background-color:rgba(158,158,158,0.4)}button.icon{border-radius:50%;font-size:24px;height:32px;margin-left:0;margin-right:0;min-width:32px;width:32px;padding:0;overflow:hidden;line-height:normal}button .material-icons{position:absolute;top:50%;left:50%;transform:translate(-12px, -12px);line-height:24px;width:24px;vertical-align:middle}input{font-family:'Consolas',Arial,Helvetica,sans-serif;font-size:1rem;color:#757575;padding:.5em;border-radius:2px;border:1px solid lightgray;outline:none}main{margin:20px 20px}.container{display:flex;justify-content:space-between}.personal{width:30%;display:flex;justify-content:center;flex-wrap:wrap}.todo{box-shadow:1px 2px 2px 1px rgb(220 220 220);width:70%;height:100%;border-radius:20px}.todo-inner{padding:.5rem 1rem;background-color:#e9e9e9;border-radius:20px}.todo-wrapper{border-radius:20px;overflow:hidden;background-color:#fff}.todo-header{background-color:#fff;text-align:center}.todo-header-info{display:flex;width:100%}.todo-header-info-time{width:25%}.todo-header-info-time p{padding:.5rem 0;margin:0;color:black;font-weight:900}.todo-header-info-field{width:50%;background-color:#e9e9e9;padding:1rem 10rem;border-radius:0 0 30px 30px}.todo-header-info-clean{width:25%;display:flex;align-items:center;justify-content:center;cursor:pointer}.todo-header-info-clean p{padding:.5rem 0;margin:0;color:black;font-weight:900}.todo-header-info-clean img{width:1.2rem;height:1.2rem;margin-left:.5rem}.todo-header h1{display:inline-block;color:black;margin:1rem auto}.todo-list-wrapper{min-height:300px}.todo-item{display:flex;font-size:1rem;background-color:#fff;transition:all .2s;-webkit-user-select:none;user-select:none;padding:1em;align-items:center}.todo-item img{width:1.5rem;height:1.5rem;margin-right:1rem}.todo-item button{margin:0 2rem}.todo-item button:hover{outline:none;background-color:#c2cddf}.todo-item .todo-item-checkbox{margin-right:.5rem}.todo-item .todo-item-title,.todo-item .todo-item-textfield{margin-right:auto;font-weight:900;text-transform:uppercase}.todo-item.completed .todo-item-title{text-decoration:line-through}.todo-item.editing .todo-item-title{display:none}.todo-item.editing .todo-item-textfield{display:block}.todo-item .todo-item-textfield{display:none}.todo-item-task-time{display:none}.todo-item-time{display:none}.todo-item-task-time{margin-right:2rem;font-weight:900}.todo-item-save{display:none}.todo-item-save.active-save{display:block}.todo-item-dots{position:relative}.todo-item-dots-more{display:none;position:absolute;top:1rem;right:2.5rem;background-color:#e9e9e9;font-size:14px;font-weight:500;text-transform:uppercase}.todo-item-dots-more.active{display:flex;flex-wrap:wrap;width:11rem}.todo-item-dots-edit{padding:.5rem 1rem;width:100%}.todo-item-dots-edit:hover{background:#c3ccdd}.todo-item-dots-time{padding:.5rem 1rem;width:100%}.todo-item-dots-time:hover{background:#c3ccdd}.todo-item-dots-delete{padding:.5rem 1rem;width:100%}.todo-item-dots-delete:hover{background:#c3ccdd}#todo-form{display:flex;background-color:#FAFAFA;border-top:1px solid rgba(0,0,0,0.1);padding:10px}#todo-form input{flex:1;outline:none;transition:all .2s;border-radius:0 0 0 20px}#todo-form input:focus{border:1px solid #f0db4f}#todo-form img{width:1.5rem;height:1.5rem}.todo-form-button{display:flex;align-items:center;background-color:rgba(158,158,158,0.2);margin-left:1rem;padding:0 1rem;border-radius:0 0 20px 0;transition:.5s all}.todo-form-button button{background:none;outline:none}.todo-form-button:hover{background-color:#c3ccdd}.active{display:block}
