--- a/css/style.less
+++ b/css/style.less
@@ -3,8 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap");
 
 body {
-    background-color: #fafafa;
-    color: #757575;
+    background: url(../img/bcg.jpg) center;
+    color: black;
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
@@ -16,7 +16,7 @@ ul {
 }
 
 button {
-    background-color: rgba(158,158,158,.2);
+    background-color: rgba(158, 158, 158, .2);
     border: none;
     border-radius: 2px;
     color: #757575;
@@ -35,7 +35,7 @@ button {
 }
 
 button:active {
-    background-color: rgba(158,158,158,.4);
+    background-color: rgba(158, 158, 158, .4);
 }
 
 button.icon {
@@ -55,7 +55,7 @@ button .material-icons {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-12px,-12px);
+    transform: translate(-12px, -12px);
     line-height: 24px;
     width: 24px;
     vertical-align: middle;
@@ -71,71 +71,167 @@ input {
     outline: none;
 }
 
-main {
-    margin: 20px 20px;
+#app {
+    backdrop-filter: blur(7px);
+    height: 100vh;
+    overflow: hidden;
 }
 
 .container {
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
+    padding: 2rem;
 }
 
 .personal {
     width: 30%;
-    display: flex;
-    justify-content: center;
+    background: #ffffffc7;
+    padding: 1rem;
+    margin-right: 1rem;
+    border-radius: 20px;
+}
+
+.personal-avatar-active {
+    position: relative;
+
+    &:hover {
+        button {
+            display: block;
+        }
+    }
+}
+
+.personal-avatar {
+    width: 30%;
+
+    img {
+        width: 100%;
+    }
+}
+
+.personal-edit {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    button {
+        width: 100%;
+        background-color: #e9e9e9;
+        transition: background-color .5s linear;
+        display: none;
+    }
+}
+
+.personal-avatar-choice {
+    display: none;
+    // display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.personal-avatar-choice-item {
+    width: 20%;
+
+    img {
+        width: 100%;
+    }
+}
+
+.personal-info {
+    width: 100%;
+}
+.personal-info-title{
+
+    margin-bottom: 1rem;
+    h2 {
+        margin: 0;
+    }
+
+    input {
+        border: none;
+        display: none;
+    }
+}
+.personal-task {
+    display: flex;
+}
+
+.personal-task-item {
+    width: 50%;
+    padding: 0.5rem 1rem;
+    margin: 0 .5rem;
+    background-color: #fff;
+    border-radius: 20px;
+    text-align: center;
+    cursor: pointer;
+
+    &.personal-task-item-active {
+        background-color: #4ee74e;
+    }
+
+    &:hover {
+        background-color: #e9e9e9;
+    }
 }
 
 .todo {
     width: 70%;
     box-shadow: 1px 2px 2px 1px rgb(220 220 220);
     width: 70%;
-    height: 100%;       
-    border-radius: 20px; 
-}
-.todo-inner {
-    padding: .5rem 1rem;
-    background-color: #e9e9e9;    
+    height: 100%;
     border-radius: 20px;
 }
+
+.todo-inner {
+    padding: .5rem 1rem;
+    background-color: #e9e9e9;
+    border-radius: 20px;
+}
+
 .todo-wrapper {
     border-radius: 20px;
     overflow: hidden;
     background-color: #fff;
 }
+
 .todo-header {
     background-color: #fff;
     text-align: center;
 }
+
 .todo-header-info {
     display: flex;
     width: 100%;
 }
+
 .todo-header-info-time {
     width: 25%;
 
-    p{
+    p {
         padding: .5rem 0;
         margin: 0;
         color: black;
         font-weight: 900;
     }
 }
+
 .todo-header-info-field {
     width: 50%;
     background-color: #e9e9e9;
     padding: 1rem 10rem;
     border-radius: 0 0 30px 30px;
 }
-.todo-header-info-clean{
+
+.todo-header-info-clean {
     width: 25%;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 
-    p{
+    p {
         padding: .5rem 0;
         margin: 0;
         color: black;
@@ -143,39 +239,54 @@ main {
     }
 }
 
-.todo-header-info-clean{
+.todo-header-info-clean {
 
-    img{
+    img {
         width: 1.2rem;
         height: 1.2rem;
         margin-left: .5rem;
     }
 }
-.todo-header {
 
-    h1 {
-        display: inline-block;    
-        color: black;
-        margin: 1rem auto;
+.todo-header-done {
+    background: #e9e9e9;
+    margin: 1rem 0;
+}
+
+.todo-header-done-percent {
+    background: #4ee74e;
+    margin: 0;
+    padding: 0.5rem 0;
+    color: black;
+    transition: width .5s linear;
+
+    p {
+        margin: 0 .5rem;
     }
 }
 
-.todo-list-wrapper{
+.todo-list-wrapper {
     min-height: 300px;
 }
+
 .todo-item {
     display: flex;
+    justify-content: space-between;
     font-size: 1rem;
     background-color: #fff;
-    transition: all .2s;
     -webkit-user-select: none;
     user-select: none;
-    padding: 1em;
+    padding: .3rem;
     align-items: center;
+    color: black;
+
+    &[data-priority='low'] {
+        background-color: red;
+    }
 
     img {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.2rem;
+        height: 1.2rem;
         margin-right: 1rem;
     }
 
@@ -196,12 +307,17 @@ main {
     .todo-item-textfield {
         margin-right: auto;
         font-weight: 900;
-        text-transform: uppercase;
+        width: 80%;
     }
 
     &.completed {
+
+        .todo-item-priority svg {
+            fill: gray;
+        }
         .todo-item-title {
             text-decoration: line-through;
+            color: gray;
         }
     }
 
@@ -209,6 +325,7 @@ main {
         .todo-item-title {
             display: none;
         }
+
         .todo-item-textfield {
             display: block;
         }
@@ -219,82 +336,84 @@ main {
     }
 }
 
-.todo-item-task-time {
-    display: none;
-}
-.todo-item-time {
-    display: none;
-}
-.todo-item-task-time {
-    margin-right: 2rem;
-    font-weight: 900;
-}
-.todo-item-save {
-    display: none;
-
-    &.active-save {
-        display: block;
-    }
-}
-.todo-item-dots {
+.todo-item-priority {
     position: relative;
-}
-.todo-item-dots-more{
     display: none;
-    position: absolute;
-    top: 1rem;
-    right: 2.5rem;
-    background-color: #e9e9e9; 
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
 
+    svg {
+        width: 1.5rem;
+        height: 1.5rem;
+        padding: 0 1rem;
+    }
 
-    &.active {
+    p {
+        position: absolute;
+        top: 0;
+        color: #fff;
+        padding: 0;
+        margin: 0;
+    }
+
+    &.normal {
         display: flex;
-        flex-wrap: wrap;
-        width: 11rem;
-    }
-}
-.todo-item-dots-edit {
-    padding: .5rem 1rem;
-    width: 100%;
+        justify-content: center;
 
-    &:hover {
-        background: #c3ccdd;
+        svg {
+            fill: #0095ff;
+        }
     }
-}
-.todo-item-dots-time {
-    padding: .5rem 1rem;
-    width: 100%;
 
-    &:hover {
-        background: #c3ccdd;
-    }
-}
-.todo-item-dots-delete {
-    padding: .5rem 1rem;
-    width: 100%;
+    &.high {
+        display: flex;
+        justify-content: center;
 
-    &:hover {
-        background: #c3ccdd;
+        svg {
+            fill: red;
+        }
     }
 }
-.todo-item.completed * {
-    // color: lightgray;
+
+.todo-item-name {
+    width: 80%;
 }
+
+.todo-item-comment {
+    display: flex;
+    color: gray;
+    font-weight: 500;
+
+    :first-child {
+        margin-right: 1rem;
+    }
+}
+.todo-item-change {
+    display: flex;
+    width: 10%;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+.todo-item-edit {
+    display: flex;
+    padding: .5rem 1rem;
+    cursor: pointer;
+}
+
+.todo-item-del {
+    display: flex;
+    padding: .5rem 1rem;
+}
+
 /* Todo form */
 
 #todo-form {
     display: flex;
     background-color: #FAFAFA;
-    border-top: 1px solid rgba(0,0,0,.1);
+    border-top: 1px solid rgba(0, 0, 0, .1);
     padding: 10px;
 
     input {
         flex: 1;
         outline: none;
-        transition: all .2s;
         border-radius: 0 0 0 20px;
 
         &:focus {
@@ -311,21 +430,142 @@ main {
 .todo-form-button {
     display: flex;
     align-items: center;
-    background-color: rgba(158,158,158,0.2);
+    background-color: rgba(158, 158, 158, 0.2);
     margin-left: 1rem;
     padding: 0 1rem;
     border-radius: 0 0 20px 0;
-    transition: .5s all;
+    transition: background-color .5s linear;
 
     button {
         background: none;
-        outline: none;        
+        outline: none;
     }
 
-    &:hover{
+    &:hover {
         background-color: #c3ccdd;
     }
 }
+
 .active {
     display: block;
+}
+
+.modal {
+    background: #00000021;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+}
+
+.modal-dialog {
+    background: #fff;
+    position: relative;
+    width: 60%;
+    margin: 0 auto;
+    padding: 1rem;
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    transition: transform 300ms linear;
+    will-change: transform;
+
+
+    &.modal-dialog-open {
+        -webkit-transform: none;
+        transform: none;
+        transition: transform 300ms linear;
+    }
+}
+
+.modal-close {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+
+    img {
+        width: 2rem;
+        height: 2rem;
+    }
+}
+
+.modal-dialog-item {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    border-bottom: 1px solid #cccccc;
+    border-top: 1px solid #cccccc;
+    margin-bottom: .5rem;
+    padding: .5rem 0;
+    max-height: 2rem;
+    transition: max-height .5s linear;
+
+    &.active {
+        max-height: 10rem;
+    }
+
+    p {
+        margin: 0;
+        margin-left: 1rem;
+    }
+}
+
+.modal-dialog-item-more {
+    width: 100%;
+    margin-top: 1rem;
+    display: flex;
+    opacity: 0;
+    transition: opacity .5s linear;
+
+    &.active {
+        opacity: 1;
+    }
+
+    p {
+        padding: .5rem 2rem;
+        background-color: #d2d2d1;
+        margin: 0;
+        margin-right: 1rem;
+        border-radius: 20px;
+        cursor: pointer;
+
+        &.priority-active,
+        &.repeat-active {
+            background-color: #4ee74e;
+        }
+    }
+
+    input {
+        width: 400px;
+    }
+}
+
+.switch {
+    background: #d2d2d1;
+    width: 3.5rem;
+    height: 2rem;
+    border-radius: 20px;
+    position: relative;
+
+    &.active {
+        background: #4ee74e;
+    }
+}
+
+.switch-round {
+    background: #fff;
+    width: 1.6rem;
+    height: 1.6rem;
+    position: absolute;
+    border-radius: 50%;
+    left: .2rem;
+    right: auto;
+    top: .2rem;
+
+    &.switched {
+        left: auto;
+        right: .2rem;
+    }
 }
